Fixed social media plugin, not showing counts

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -9319,7 +9319,8 @@ div.ctct-form-embed div.ctct-form-defaults p.ctct-form-text {
 			font-size: 20px;
 			font-weight: 500;
 			line-height: 1.2;
-			color: $color-red;
+			// color: $color-red;
+			color: $color__text-main;
 		}
 		&:hover {
 			.t2 {
@@ -9495,7 +9496,60 @@ body.single-post {
 	}
 }
 
-@media screen and (max-width:820px) {
+.new-share-buttons {
+	background: #FFF;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	transition: all ease .3s;
+	&.fixed {
+		width: 100%;
+		position: fixed;
+		left: 0;
+		bottom: 0;
+		z-index: 999999;
+		margin-top: 0;
+		margin-bottom: 0;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+	}
+}
+
+.main-navigation #primary-menu a.redbutton,
+.mobilemain #primary-menu a.redbutton {
+	display: inline-block;
+	background: #FF0000;
+	color: #FFF;
+	position: relative;
+	padding: 6px 15px 4px;
+	line-height: 1.2;
+	border-radius: 100px;
+	margin-right: 10px;
+	text-align: center;
+}
+body.social-media-sticky {
+	padding-bottom: 60px;
+	.grecaptcha-badge {
+		bottom: 60px!important;
+	}
+}
+
+@media screen and (max-width:1025px) {
+	.logo, h1.logo {
+		width: 90px;
+	}
+	.main-navigation a {
+		padding: 0 12px;
+		top: 8px;
+	}
+	.main-navigation #primary-menu a.redbutton {
+		top: 2px;
+	}
+}
+
+
+
+@media screen and (max-width:767px) {
 	body.single-post #main .singleSidebar {margin-top:0!important;}		
 	.singleSidebar {padding-left: 20px;padding-right: 20px;}
 	body.single-post #sidebar-single-post {
@@ -9503,5 +9557,15 @@ body.single-post {
 		position:relative !important;
 		width: 100%!important;
 	}
+	.main-navigation #primary-menu a.redbutton,
+	.mobilemain #primary-menu a.redbutton {
+		display: block;
+		padding: 10px 20px 6px;
+		margin-top: 15px;
+    margin-bottom: 15px;
+	}
 }
+
+
+
 
